@@ -583,6 +583,7 @@ static void discover_devices_task(scalar_condition<bool> const& cancel)
 
 		// Discover the devices on the local network and check for changes
 		discover_devices(dbhandle, settings.use_broadcast_device_discovery, settings.disable_storage_devices, changed);
+		enumerate_device_names(dbhandle, [caller = __func__](struct device_name const& device_name) -> void { log_notice(caller, ": discovered: ", device_name.name); });
 
 		if(changed) {
 
@@ -851,7 +852,12 @@ static void discover_startup_task(bool includedevices, scalar_condition<bool> co
 		if(includedevices) { 
 
 			// DISCOVER: Devices
-			try { discover_devices(dbhandle, settings.use_broadcast_device_discovery, settings.disable_storage_devices); }
+			try { 
+				
+				discover_devices(dbhandle, settings.use_broadcast_device_discovery, settings.disable_storage_devices); 
+				enumerate_device_names(dbhandle, [caller = __func__](struct device_name const& device_name) -> void { log_notice(caller, ": discovered: ", device_name.name); });
+			}
+
 			catch(std::exception& ex) { handle_stdexception(__func__, ex); }
 			catch(...) { handle_generalexception(__func__); }
 
@@ -1496,6 +1502,7 @@ ADDON_STATUS ADDON_Create(void* handle, void* props)
 
 							log_notice(__func__, ": initiating local network resource discovery (startup)");
 							discover_devices(dbhandle, g_settings.use_broadcast_device_discovery, g_settings.disable_storage_devices);
+							enumerate_device_names(dbhandle, [caller = __func__](struct device_name const& device_name) -> void { log_notice(caller, ": discovered: ", device_name.name); });
 							discover_lineups(dbhandle);
 
 							// Alert the user if no tuner device(s) were found during startup or are cached in the database
